--- a/inder.html
+++ b/inder.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<h1>SIMPLE CALCULATOR</h1>
+<h1>SIMPLE C<span>AL</span>CULATOR</h1>
 <body>
     <!-- <div id="container"> -->
         <div id="calculator">
